--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <div class="sidebar">
                     <button onclick="showView('concert')">🎤 Concerts</button>
                     <button onclick="showView('training')">📚 Entraînement</button>
+                    <button onclick="showView('albums')">💿 Albums</button>
                     <button onclick="showView('shop')">🛒 Boutique</button>
                     <button onclick="showView('groups')">🎸 Groupes</button>
                     <button onclick="showView('stats')">📊 Statistiques</button>
@@ -65,6 +66,15 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="config.js"></script>
+    <script src="player.js"></script>
+    <script src="game.js"></script>
+    <script src="concerts.js"></script>
+    <script src="training.js"></script>
+    <script src="albums.js"></script>
+    <script src="shop.js"></script>
+    <script src="groups.js"></script>
+    <script src="lifestyle.js"></script>
+    <script src="views.js"></script>
 </body>
 </html>
